almost finished with image stacking

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Cassie's Home Recipes</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&family=Plus+Jakarta+Sans:wght@200;400&family=Roboto&family=Rubik:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./ASSETS/CSS/style.min.css" />
   </head>
   <body>
@@ -12,6 +18,7 @@
         <div class="banner-text">
           <h1>home</h1>
           <img
+            class="rose_image"
             src="./ASSETS/Images/rose_image.png"
             alt="image of a rose"
             width="50"
@@ -25,20 +32,116 @@
     </header>
     <div class="navbar-container">
       <div class="navbar">
-        <p>breads</p>
-        <p>lambs</p>
-        <p>chicken</p>
-        <p>beef</p>
-        <p>sweets</p>
+        <a href="#">breads</a>
+        <a href="#">lamb</a>
+        <a href="#">chicken</a>
+        <a href="#">beef</a>
+        <a href="#">sweets</a>
       </div>
     </div>
     <main class="container">
-      <img
-        src="./ASSETS/Images/sourdough_loaf.jpg"
-        alt=""
-        height="200"
-        width="200"
-      />
+      <figure>
+        <div class="col-4">
+          <img
+            class="sourdough-img"
+            src="./ASSETS/Images/sourdough_loaf.jpg"
+            alt="image of a loaf of sourdough bread"
+            height="200"
+            width="350"
+          />
+
+          <img
+            class="cookies-img"
+            src="./ASSETS/Images/choc_chip_cookies.webp"
+            alt="image of chocolate chip cookies"
+            height="300"
+            width="350"
+          />
+
+          <img
+            class="moroccan-meatballs-img"
+            src="./ASSETS/Images/moroccan_meatballs.jpg"
+            alt="image of moroccan_meatballs"
+            height="200"
+            width="350"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            class="crepes-img"
+            src="./ASSETS/Images/crepes.jpg"
+            alt="image of a plate of crepes"
+            height="200"
+            width="350"
+          />
+
+          <img
+            class="buns-img"
+            src="./ASSETS/Images/buns.jpg"
+            alt="image of buns"
+            height="200"
+            width="350"
+          />
+          <img
+            class="brownies-img"
+            src="./ASSETS/Images/brownies.jpg"
+            alt="image of brownies"
+            height="200"
+            width="350"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            class="chicken-soup"
+            src="./ASSETS/Images/chicken_soup.jpg"
+            alt="image of a bowl of chicken soup"
+            height="200"
+            width="350"
+          />
+          <img
+            class="roast-chicken-img"
+            src="./ASSETS/Images/roast chicken.webp"
+            alt="image of roast chicken"
+            height="200"
+            width="350"
+          />
+          <img
+            class="Beef-Stroganoff-img"
+            src="./ASSETS/Images/Beef-Stroganoff.webp"
+            alt="image of a bowl of beef Beef-Stroganoff noodles"
+            height="200"
+            width="350"
+          />
+        </div>
+        <div class="col-4">
+          <img
+            class="ricecrispies-img"
+            src="./ASSETS/Images/rice_crispies.jpg"
+            alt="image of rice crispie squares"
+            height="200"
+            width="350"
+          />
+
+          <img
+            class="dan-dan-noodle-img"
+            src="./ASSETS/Images/dan_dan_noodles.jpg"
+            alt="image of a bowl of dan dan noodles"
+            height="200"
+            width="350"
+          />
+
+          <img
+            class="chicken-wraps-img"
+            src="./ASSETS/Images/chicken_wraps.jpg"
+            alt="image of chicken wraps"
+            height="200"
+            width="350"
+          />
+        </div>
+      </figure>
     </main>
+    <footer>
+      <p class="copyright">&copy; Cassie Henderson 2023</p>
+    </footer>
   </body>
 </html>
