update with option menu functionality

--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
       <div class="banner">
         <div class="banner-text">
           <h1>home</h1>
-          <img
-            class="rose_image"
-            src="./ASSETS/Images/rose_image.png"
-            alt="image of a rose"
-            width="50"
-          />
+          <a href="./index.html">
+            <img
+              class="rose_image"
+              src="./ASSETS/Images/rose_image.png"
+              alt="image of a rose"
+              width="50"
+          /></a>
           <h1>recipes</h1>
         </div>
         <div class="banner-caption">
@@ -36,7 +37,7 @@
         <a href="#">lamb</a>
         <a href="#">chicken</a>
         <a href="#">beef</a>
-        <a href="#">sweets</a>
+        <a href="./sweets.html">sweets</a>
       </div>
     </div>
     <main class="container">
@@ -146,5 +147,6 @@
     </main>
 
     <footer><p class="copyright">&copy; cassie henderson</p></footer>
+    <script src="./ASSETS/Scripts/script.js"></script>
   </body>
 </html>
