--- a/breads.html
+++ b/breads.html
@@ -41,43 +41,22 @@
       </div>
     </div>
     <main class="container">
-      <form action="" onchange="redirectToPage(this)">
-        <select name="sweets" id="sweet-treats" class="menu">
-          <option value="" disabled selected>Select a sweet treat</option>
-          <option value="./cookies.html">Cookies</option>
-          <option value="./brownies.html">Brownies</option>
-          <option value="./sweets.html">back to sweets</option>
-        </select>
-      </form>
-      <section>
-        <h1>cookie time cookies</h1>
-        <div class="grid grid-2col">
-          <div class="cookie-ingredients">
-            <h3>225g butter</h3>
-            <h3>200g brown sugar</h3>
-            <h3>100g castor sugar</h3>
-            <h3>2 eggs</h3>
-            <h3>180g flour</h3>
-            <h3>180g self-raising</h3>
-            <h3>1 tsp cornflour</h3>
-            <h3>1.2 tsp salt</h3>
-            <h3>1 tsp baking soda</h3>
-            <h3>350g chocolate (best with whittakers)</h3>
-            <h3>makes 10-12. bake at 180c-200c for 10-14 minutes</h3>
-          </div>
-          <div>
-            <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
-              alt="image of chocolate chip cookies"
-            />
-          </div>
-        </div>
-        <p class="cookie-instructions">
-          with a stand mixer, mix butter and sugar for at least 5mins.<br> add eggs one
-          at a time, then add all of the other ingredients.</br> add chocolate the last. <br>spoon mix
-          into large mounds. then freeze for at least 30mins.</br>
-        </p>
-      </section>
+      <div class="form-container">
+        <form action="" onchange="redirectToPage(this)">
+          <select name="sweets" id="menu" class="menu">
+            <option value="" disabled selected>Select a sweet treat</option>
+            <option value="./cookies.html">cookies</option>
+            <option value="./brownies.html">brownies</option>
+            <option value="./sweets.html">back to sweets</option>
+          </select>
+        </form>
+      </div>
+      <img
+        src="./ASSETS/Images/pizza_1.jpg"
+        height="450"
+        width="500"
+        alt="image of chocolate chip cookies"
+      />
     </main>
 
     <footer><p class="copyright">&copy; cassie henderson</p></footer>
