--- a/sweets.html
+++ b/sweets.html
@@ -33,17 +33,17 @@
     </header>
     <div class="navbar-container">
       <div class="navbar">
-        <a href="#">breads</a>
-        <a href="#">lamb</a>
-        <a href="#">chicken</a>
-        <a href="#">beef</a>
-        <a href="#">sweets</a>
+        <a href="./breads.html">breads</a>
+        <a href="./lamb.html">lamb</a>
+        <a href="./chicken.html">chicken</a>
+        <a href="./beef.html">beef</a>
+        <a href="./sweets.html">sweets</a>
       </div>
     </div>
     <main class="container">
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
-          <select name="sweets" id="sweet-treats" class="sweet-treats">
+          <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a sweet treat</option>
             <option value="./cookies.html">cookies</option>
             <option value="./brownies.html">brownies</option>
@@ -51,7 +51,10 @@
           </select>
         </form>
       </div>
-      <img src="./ASSETS/Images/choc_chip_cookies.webp" alt="" />
+      <img
+        src="./ASSETS/Images/choc_chip_cookies.webp"
+        alt="image of chocolate chip cookies"
+      />
     </main>
 
     <footer><p class="copyright">&copy; cassie henderson</p></footer>
