added meal planner button

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <a href="./sweets.html">sweets</a>
       </div>
     </div>
+    <button>create a meal planner</button>
     <main class="container">
       <figure>
         <div class="col-4">
