--- a/index.html
+++ b/index.html
@@ -16,30 +16,32 @@
     <header>
       <div class="banner">
         <div class="banner-text">
-          <h1>home</h1>
+          <a href="./index.html"> <h1>home</h1></a>
           <a href="./index.html">
             <img
-              class="rose_image"
+              class="rose-image"
               src="./ASSETS/Images/rose_image.png"
               alt="image of a rose"
               width="50"
           /></a>
-          <h1>recipes</h1>
+          <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
           <p>"an archive of all your favourite dishes"</p>
         </div>
       </div>
     </header>
-    <div class="navbar-container">
-      <div class="navbar">
-        <a href="#">breads</a>
-        <a href="#">lamb</a>
-        <a href="#">chicken</a>
-        <a href="#">beef</a>
-        <a href="./sweets.html">sweets</a>
+    <nav>
+      <div class="navbar-container">
+        <div class="navbar">
+          <a href="./breads.html">breads</a>
+          <a href="./lamb.html">lamb</a>
+          <a href="./chicken.html">chicken</a>
+          <a href="./beef.html">beef</a>
+          <a href="./sweets.html">sweets</a>
+        </div>
       </div>
-    </div>
+    </nav>
     <button>create a meal planner</button>
 
     <main class="container">
