--- a/sweets.html
+++ b/sweets.html
@@ -31,16 +31,19 @@
         </div>
       </div>
     </header>
-    <div class="navbar-container">
-      <div class="navbar">
-        <a href="./breads.html">breads</a>
-        <a href="./lamb.html">lamb</a>
-        <a href="./chicken.html">chicken</a>
-        <a href="./beef.html">beef</a>
-        <a href="./sweets.html">sweets</a>
+    <nav>
+      <div class="navbar-container">
+        <div class="navbar">
+          <a href="./breads.html">breads</a>
+          <a href="./lamb.html">lamb</a>
+          <a href="./chicken.html">chicken</a>
+          <a href="./beef.html">beef</a>
+          <a href="./sweets.html">sweets</a>
+        </div>
       </div>
-    </div>
+    </nav>
     <main class="container">
+      <h1 class="form-instructions">please select from the drop down menu</h1>
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
@@ -51,10 +54,84 @@
           </select>
         </form>
       </div>
-      <img
-        src="./ASSETS/Images/choc_chip_cookies.webp"
-        alt="image of chocolate chip cookies"
-      />
+      <figure>
+        <div class="image-banner">
+          <div class="image-slider">
+            <img
+              src="./ASSETS/Images/choc_chip_cookies.webp"
+              alt="image of chocolate chip cookies"
+              height="200"
+              width="300"
+            />
+            <img
+              src="./ASSETS/Images/brownies.jpg"
+              height="200"
+              width="300"
+              alt=""
+            />
+            <img
+              src="./ASSETS/Images/lemon_loaf.jpg"
+              height="200"
+              width="300"
+            />
+            <img
+              src="./ASSETS/Images/banana_cake.webp"
+              height="200"
+              width="300"
+              alt=""
+            />
+            <img
+              src="./ASSETS/Images/applecruble.jpg"
+              height="200"
+              width="300"
+              alt=""
+            />
+            <img
+              src="./ASSETS/Images/spiced_cookies.jpg"
+              height="200"
+              width="300"
+              alt=""
+            />
+          </div>
+          <div class="image-slider">
+            <img
+              src="./ASSETS/Images/choc_chip_cookies.webp"
+              alt="image of chocolate chip cookies"
+              height="200"
+              width="300"
+            />
+            <img
+              src="./ASSETS/Images/brownies.jpg"
+              height="200"
+              width="300"
+              alt=""
+            />
+            <img
+              src="./ASSETS/Images/lemon_loaf.jpg"
+              height="200"
+              width="300"
+            />
+            <img
+              src="./ASSETS/Images/banana_cake.webp"
+              height="200"
+              width="300"
+              alt=""
+            />
+            <img
+              src="./ASSETS/Images/applecruble.jpg"
+              height="200"
+              width="300"
+              alt=""
+            />
+            <img
+              src="./ASSETS/Images/spiced_cookies.jpg"
+              height="200"
+              width="300"
+              alt=""
+            />
+          </div>
+        </div>
+      </figure>
     </main>
 
     <footer><p class="copyright">&copy; cassie henderson</p></footer>
