--- a/cookies.html
+++ b/cookies.html
@@ -50,9 +50,9 @@
         </select>
       </form>
       <section>
-        <h1>cookie time cookies</h1>
+        <h1 class="recipe-heading">cookie time cookies</h1>
         <div class="grid grid-2col">
-          <div class="cookie-ingredients">
+          <div class="recipe-ingredients">
             <h3>225g butter</h3>
             <h3>200g brown sugar</h3>
             <h3>100g castor sugar</h3>
@@ -63,16 +63,19 @@
             <h3>1.2 tsp salt</h3>
             <h3>1 tsp baking soda</h3>
             <h3>350g chocolate (best with whittakers)</h3>
-            <h3>makes 10-12. bake at 180c-200c for 10-14 minutes</h3>
+         <div class="recipe-gap">
+            <h3>makes 10-12</h3>
+             <h3>bake at 180c-200c for 10-14 minutes</h3>
+         </div>
           </div>
           <div>
             <img
               src="./ASSETS/Images/choc_chip_cookies.webp"
-              alt="image of chocolate chip cookies"
+              alt="image of chocolate chip cookies" height="300" width="400"
             />
           </div>
         </div>
-        <p class="cookie-instructions">
+        <p class="recipe-instructions">
           with a stand mixer, mix butter and sugar for at least 5mins.<br> add eggs one
           at a time, then add all of the other ingredients.</br> add chocolate the last. <br>spoon mix
           into large mounds. then freeze for at least 30mins.</br>
