--- a/breads.html
+++ b/breads.html
@@ -16,15 +16,15 @@
     <header>
       <div class="banner">
         <div class="banner-text">
-          <h1>home</h1>
+          <a href="./index.html"> <h1>home</h1></a>
           <a href="./index.html">
             <img
-              class="rose_image"
+              class="rose-image"
               src="./ASSETS/Images/rose_image.png"
               alt="image of a rose"
               width="50"
           /></a>
-          <h1>recipes</h1>
+          <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
           <p>"an archive of all your favourite dishes"</p>
@@ -59,7 +59,7 @@
           <div class="image-slider">
             <img
               src=".//ASSETS/Images/buns.jpg"
-              alt="image of chocolate chip cookies"
+              alt="image of bread buns"
               height="200"
               width="300"
             />
@@ -67,67 +67,69 @@
               src="./ASSETS/Images/sourdough_loaf.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of a sourdough loaf"
             />
             <img
-              src="./ASSETS/Images/lemon_loaf.jpg"
+              src="./ASSETS/Images/pizza_1.jpg"
               height="200"
               width="300"
+              alt="image of pizza slice"
             />
             <img
-              src="./ASSETS/Images/banana_cake.webp"
+              src="./ASSETS/Images/baguette.jpeg"
               height="200"
               width="300"
-              alt=""
+              alt="image of a baguette"
             />
             <img
-              src="./ASSETS/Images/applecruble.jpg"
+              src="./ASSETS/Images/white_loaf.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of a white loaf of bread"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies.jpg"
+              src="./ASSETS/Images/croissant.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="iamge of croissant"
             />
           </div>
           <div class="image-slider">
             <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
-              alt="image of chocolate chip cookies"
+              src=".//ASSETS/Images/buns.jpg"
+              alt="image of bread buns"
               height="200"
               width="300"
             />
             <img
-              src="./ASSETS/Images/brownies.jpg"
+              src="./ASSETS/Images/sourdough_loaf.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of a sourdough loaf"
             />
             <img
-              src="./ASSETS/Images/lemon_loaf.jpg"
+              src="./ASSETS/Images/pizza_1.jpg"
               height="200"
               width="300"
+              alt="image of pizza slice"
             />
             <img
-              src="./ASSETS/Images/banana_cake.webp"
+              src="./ASSETS/Images/baguette.jpeg"
               height="200"
               width="300"
-              alt=""
+              alt="image of a baguette"
             />
             <img
-              src="./ASSETS/Images/applecruble.jpg"
+              src="./ASSETS/Images/white_loaf.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of a white loaf of bread"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies.jpg"
+              src="./ASSETS/Images/croissant.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="iamge of croissant"
             />
           </div>
         </div>
