--- a/lamb.html
+++ b/lamb.html
@@ -16,15 +16,15 @@
     <header>
       <div class="banner">
         <div class="banner-text">
-          <h1>home</h1>
+          <a href="./index.html"> <h1>home</h1></a>
           <a href="./index.html">
             <img
-              class="rose_image"
+              class="rose-image"
               src="./ASSETS/Images/rose_image.png"
               alt="image of a rose"
               width="50"
           /></a>
-          <h1>recipes</h1>
+          <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
           <p>"an archive of all your favourite dishes"</p>
@@ -58,76 +58,78 @@
         <div class="image-banner">
           <div class="image-slider">
             <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
-              alt="image of chocolate chip cookies"
+              src="./ASSETS/Images/lamb_stew.jpg"
+              alt="image of a lamb stew"
               height="200"
               width="300"
             />
             <img
-              src="./ASSETS/Images/brownies.jpg"
+              src="./ASSETS/Images/lamb_meatballs.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb meatballs"
             />
             <img
-              src="./ASSETS/Images/lemon_loaf.jpg"
+              src="./ASSETS/Images/lamb_roast.jpg"
               height="200"
               width="300"
+              alt="image of a lamb roast"
             />
             <img
-              src="./ASSETS/Images/banana_cake.webp"
+              src="./ASSETS/Images/lamb_chops.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb chops"
             />
             <img
-              src="./ASSETS/Images/applecruble.jpg"
+              src="./ASSETS/Images/lamb_salad.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb salad"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies.jpg"
+              src="./ASSETS/Images/lamb_kebabs.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb kebabs"
             />
           </div>
           <div class="image-slider">
             <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
-              alt="image of chocolate chip cookies"
+              src="./ASSETS/Images/lamb_stew.jpg"
+              alt="image of a lamb stew"
               height="200"
               width="300"
             />
             <img
-              src="./ASSETS/Images/brownies.jpg"
+              src="./ASSETS/Images/lamb_meatballs.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb meatballs"
             />
             <img
-              src="./ASSETS/Images/lemon_loaf.jpg"
+              src="./ASSETS/Images/lamb_roast.jpg"
               height="200"
               width="300"
+              alt="image of a lamb roast"
             />
             <img
-              src="./ASSETS/Images/banana_cake.webp"
+              src="./ASSETS/Images/lamb_chops.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb chops"
             />
             <img
-              src="./ASSETS/Images/applecruble.jpg"
+              src="./ASSETS/Images/lamb_salad.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb salad"
             />
             <img
-              src="./ASSETS/Images/spiced_cookies.jpg"
+              src="./ASSETS/Images/lamb_kebabs.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of lamb kebabs"
             />
           </div>
         </div>
