--- a/sweets.html
+++ b/sweets.html
@@ -16,15 +16,15 @@
     <header>
       <div class="banner">
         <div class="banner-text">
-          <h1>home</h1>
+          <a href="./index.html"> <h1>home</h1></a>
           <a href="./index.html">
             <img
-              class="rose_image"
+              class="rose-image"
               src="./ASSETS/Images/rose_image.png"
               alt="image of a rose"
               width="50"
           /></a>
-          <h1>recipes</h1>
+          <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
           <p>"an archive of all your favourite dishes"</p>
@@ -67,30 +67,31 @@
               src="./ASSETS/Images/brownies.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of brownies"
             />
             <img
               src="./ASSETS/Images/lemon_loaf.jpg"
               height="200"
               width="300"
+              alt="image of a lemon loaf"
             />
             <img
               src="./ASSETS/Images/banana_cake.webp"
               height="200"
               width="300"
-              alt=""
+              alt="image of a banana cake"
             />
             <img
               src="./ASSETS/Images/applecruble.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of applecrumble"
             />
             <img
               src="./ASSETS/Images/spiced_cookies.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of spiced cookies"
             />
           </div>
           <div class="image-slider">
@@ -104,30 +105,31 @@
               src="./ASSETS/Images/brownies.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of brownies"
             />
             <img
               src="./ASSETS/Images/lemon_loaf.jpg"
               height="200"
               width="300"
+              alt="image of a lemon loaf"
             />
             <img
               src="./ASSETS/Images/banana_cake.webp"
               height="200"
               width="300"
-              alt=""
+              alt="image of a banana cake"
             />
             <img
               src="./ASSETS/Images/applecruble.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of applecrumble"
             />
             <img
               src="./ASSETS/Images/spiced_cookies.jpg"
               height="200"
               width="300"
-              alt=""
+              alt="image of spiced cookies"
             />
           </div>
         </div>
