--- a/cookies.html
+++ b/cookies.html
@@ -16,15 +16,15 @@
     <header>
       <div class="banner">
         <div class="banner-text">
-          <h1>home</h1>
+          <a href="./index.html"> <h1>home</h1></a>
           <a href="./index.html">
             <img
-              class="rose_image"
+              class="rose-image"
               src="./ASSETS/Images/rose_image.png"
               alt="image of a rose"
               width="50"
           /></a>
-          <h1>recipes</h1>
+          <a href="./index.html"><h1>recipes</h1></a>
         </div>
         <div class="banner-caption">
           <p>"an archive of all your favourite dishes"</p>
