grid used for recipes section

--- a/cookies.html
+++ b/cookies.html
@@ -49,37 +49,40 @@
           <option value="./sweets.html">back to sweets</option>
         </select>
       </form>
-      <section>
-        <h1 class="recipe-heading">cookie time cookies</h1>
-        <div class="grid grid-2col">
-          <div class="recipe-ingredients">
-            <h3>225g butter</h3>
-            <h3>200g brown sugar</h3>
-            <h3>100g castor sugar</h3>
-            <h3>2 eggs</h3>
-            <h3>180g flour</h3>
-            <h3>180g self-raising</h3>
-            <h3>1 tsp cornflour</h3>
-            <h3>1.2 tsp salt</h3>
-            <h3>1 tsp baking soda</h3>
-            <h3>350g chocolate (best with whittakers)</h3>
-         <div class="recipe-gap">
-            <h3>makes 10-12</h3>
-             <h3>bake at 180c-200c for 10-14 minutes</h3>
-         </div>
-          </div>
-          <div>
-            <img
-              src="./ASSETS/Images/choc_chip_cookies.webp"
-              alt="image of chocolate chip cookies" height="300" width="400"
-            />
-          </div>
+      <section class="recipe">
+        <div class="recipe-heading"><h1>cookie time cookies</h1></div>
+        <div class="recipe-ingredients">
+          <ul>
+            <li>225g of butter</li>
+            <li>200g brown sugar</li>
+            <li>100g castor sugar</li>
+            <li>2 eggs</li>
+            <li>180g of flour</li>
+            <li>180g self-raising</li>
+            <li>1 teaspoon of cornflour</li>
+            <li>1/2 teaspoon of salt</li>
+            <li>1 teaspoon baking soda</li>
+            <li>350g chocolate (best is whitakers)</li>
+          </ul>
+          <ul class="recipe-gap">
+            <li>makes 10-12</li>
+            <li>bake at 180*c-200*c for 10-14 minutes</li>
+          </ul>
         </div>
-        <p class="recipe-instructions">
-          with a stand mixer, mix butter and sugar for at least 5mins.<br> add eggs one
-          at a time, then add all of the other ingredients.</br> add chocolate the last. <br>spoon mix
-          into large mounds. then freeze for at least 30mins.</br>
-        </p>
+        <div class="recipe-img">
+          <img
+            src="./ASSETS/Images/choc_chip_cookies.webp"
+            alt="image of cookies"
+          />
+        </div>
+        <div class="recipe-instructions">
+          <p>
+            with a stand mixer, mix butter and sugar for at least 5 minutes. add
+            eggs one at a time. then add all of the other ingredients. add the
+            chocolate last! spoon the mixture into large mounds. then freeze for
+            at least 30 minutes.
+          </p>
+        </div>
       </section>
     </main>
 
