--- a/cookies.html
+++ b/cookies.html
@@ -57,30 +57,32 @@
             <li>200g brown sugar</li>
             <li>100g castor sugar</li>
             <li>2 eggs</li>
-            <li>180g of flour</li>
+            <li>180g flour</li>
             <li>180g self-raising</li>
-            <li>1 teaspoon of cornflour</li>
+            <li>1 teaspoon cornflour</li>
             <li>1/2 teaspoon of salt</li>
             <li>1 teaspoon baking soda</li>
             <li>350g chocolate (best is whitakers)</li>
           </ul>
           <ul class="recipe-gap">
             <li>makes 10-12</li>
-            <li>bake at 180*c-200*c for 10-14 minutes</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
             src="./ASSETS/Images/choc_chip_cookies.webp"
             alt="image of cookies"
+            height="250"
+            width="350"
           />
         </div>
         <div class="recipe-instructions">
+          <h3>directions:</h3>
           <p>
             with a stand mixer, mix butter and sugar for at least 5 minutes. add
             eggs one at a time. then add all of the other ingredients. add the
-            chocolate last! spoon the mixture into large mounds. then freeze for
-            at least 30 minutes.
+            chocolate last. spoon the mixture into large mounds. then freeze for
+            at least 30 minutes. bake at 180*c-200*c for 10-14 minutes
           </p>
         </div>
       </section>
