--- a/breads.html
+++ b/breads.html
@@ -48,9 +48,9 @@
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a bread</option>
-            <option value="./cookies.html">cookies</option>
-            <option value="./brownies.html">brownies</option>
-            <option value="./sweets.html">back to sweets</option>
+            <option value="./sourdough.html">sourdough</option>
+            <option value="./brownies.html">bread buns</option>
+            <option value="./breads.html">back to breads</option>
           </select>
         </form>
       </div>
