--- a/baguettes.html
+++ b/baguettes.html
@@ -41,36 +41,30 @@
       </div>
     </div>
     <main class="container">
-      <form action="" onchange="redirectToPage(this)">
-        <select name="sweets" id="sweet-treats" class="menu">
-          <option value="" disabled selected>Select a sweet treat</option>
-          <option value="./cookies.html">Cookies</option>
-          <option value="./brownies.html">Brownies</option>
-          <option value="./sweets.html">back to sweets</option>
-        </select>
-      </form>
+      <div class="form-container">
+        <form action="" onchange="redirectToPage(this)">
+          <select name="sweets" id="menu" class="menu">
+            <option value="" disabled selected>Select a bread</option>
+            <option value="./sourdough.html">sourdough</option>
+            <option value="./baguettes.html">bread buns</option>
+            <option value="./breads.html">back to breads</option>
+          </select>
+        </form>
+      </div>
       <section class="recipe">
-        <div class="recipe-heading"><h1>cookie time cookies</h1></div>
+        <div class="recipe-heading"><h1>baguettes</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>225g of butter</li>
-            <li>200g brown sugar</li>
-            <li>100g castor sugar</li>
-            <li>2 eggs</li>
-            <li>180g flour</li>
-            <li>180g self-raising</li>
-            <li>1 teaspoon cornflour</li>
-            <li>1/2 teaspoon of salt</li>
-            <li>1 teaspoon baking soda</li>
-            <li>350g chocolate (best is whitakers)</li>
-          </ul>
-          <ul class="recipe-gap">
-            <li>makes 10-12</li>
+            <li>1, 1/2 cups warm water</li>
+            <li>1, 1/2 yeast</li>
+            <li>2 teaspoon sugar</li>
+            <li>3, 1/4 cups flour</li>
+            <li>1 teaspoon salt</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/choc_chip_cookies.webp"
+            src="./ASSETS/Images/baguette.jpeg"
             alt="image of cookies"
             height="250"
             width="350"
@@ -78,25 +72,10 @@
         </div>
         <div class="recipe-instructions">
           <h3>directions:</h3>
-          <!-- <p>
-            with a stand mixer, mix butter and sugar for at least 5 minutes. add
-            eggs one at a time. then add all of the other ingredients. add the
-            chocolate last. spoon the mixture into large mounds. then freeze for
-            at least 30 minutes. bake at 180*c-200*c for 10-14 minutes
-          </p> -->
           <ol>
-            <li>
-              with a stand mixer, mix butter and sugar for at least 5 minutes.
-            </li>
-            <li>
-              add eggs one at a time. then add all of the other ingredients
-            </li>
-            <li>add the chocolate last.</li>
-            <li>
-              spoon the mixture into large mounds. then freeze for at least 30
-              minutes.
-            </li>
-            <li>bake at 180*c-200*c for 10-14 minutes</li>
+            <li>cut down the middle.</li>
+            <li>let rise for 30 minutes.</li>
+            <li>bake at 200*c-220*c for 15 minutes</li>
           </ol>
         </div>
       </section>
