--- a/beef.html
+++ b/beef.html
@@ -48,9 +48,9 @@
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a beef dish</option>
-            <option value="./cookies.html">cookies</option>
-            <option value="./brownies.html">brownies</option>
-            <option value="./sweets.html">back to sweets</option>
+            <option value="./sloppy_joes.html">sloppy joes</option>
+            <option value="./beef_stroganoff.html">beef stroganoff</option>
+            <option value="./beef.html">back to beef dishes</option>
           </select>
         </form>
       </div>
