--- a/breads.html
+++ b/breads.html
@@ -49,7 +49,7 @@
           <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a bread</option>
             <option value="./sourdough.html">sourdough</option>
-            <option value="./brownies.html">bread buns</option>
+            <option value="./baguettes.html">baguettes</option>
             <option value="./breads.html">back to breads</option>
           </select>
         </form>
