--- a/chicken.html
+++ b/chicken.html
@@ -48,9 +48,11 @@
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
             <option value="" disabled selected>Select a chicken dish</option>
-            <option value="./cookies.html">cookies</option>
-            <option value="./brownies.html">brownies</option>
-            <option value="./sweets.html">back to sweets</option>
+            <option value="./garlic_lime_chicken.html">
+              garlic lime chicken
+            </option>
+            <option value="./chicken_paprikash.html">chicken paprikash</option>
+            <option value="./chicken.html">back to chicken dishes</option>
           </select>
         </form>
       </div>
