--- a/chicken_paprikash.html
+++ b/chicken_paprikash.html
@@ -44,26 +44,39 @@
       <div class="form-container">
         <form action="" onchange="redirectToPage(this)">
           <select name="sweets" id="menu" class="menu">
-            <option value="" disabled selected>Select a bread</option>
-            <option value="./sourdough.html">sourdough</option>
-            <option value="./baguettes.html">baguettes</option>
-            <option value="./breads.html">back to breads</option>
+            <option value="" disabled selected>Select a chicken dish</option>
+            <option value="./garlic_lime_chicken.html">
+              garlic lime chicken
+            </option>
+            <option value="./chicken_paprikash.html">chicken paprikash</option>
+            <option value="./chicken.html">back to chicken dishes</option>
           </select>
         </form>
       </div>
       <section class="recipe">
-        <div class="recipe-heading"><h1>sourdough bread</h1></div>
+        <div class="recipe-heading"><h1>chicken paprikash</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>460g flour</li>
-            <li>330ml water</li>
-            <li>150g starter</li>
-            <li>1 teaspoon salt</li>
+            <li>8 skin on bone-in chicken thighs</li>
+            <li>1 tbsp vegetable oil</li>
+            <li>2 onions, finely chopped</li>
+            <li>2 red or green peppers(or a mixture), chopped</li>
+            <li>2 garlic cloves, crushed or finely grated</li>
+            <li>
+              3 large ripe tomatoes (around 400g), deseeded and chopped, or a
+              400g can chopped tomatoes
+            </li>
+            <li>1 1/2 tbsp plain flour</li>
+            <li>3 tbsp sweet smoked paprika</li>
+            <li>1 tbsp hot paprika(optional)</li>
+            <li>350ml chicken stock</li>
+            <li>200ml soured cream</li>
+            <li>boiled potatoes, noodles or rice, to serve</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/sourdough_loaf.jpg"
+            src="./ASSETS/Images/chicken_paprikash.jpg"
             alt="image of cookies"
             height="250"
             width="350"
@@ -72,27 +85,25 @@
         <div class="recipe-instructions">
           <h3>directions:</h3>
           <ol>
-            <li>feed starter</li>
             <li>
-              autolyse, hydrate flour. shaggy dough. cover and leave for 3-4
-              hours
+              Season the chicken thighs. Heat the oil in a large saucepan over a
+              medium heat and fry the thighs in batches for 5-8 mins until
+              browned all over. Remove from the pan and set aside. Tip in the
+              onion and fry for 8-10 mins until softened and turning golden.
             </li>
             <li>
-              add 150g starter and salt, wet hands to mix mix, put onto glass
-              dish, leave for 30 minutes.
+              Stir in the peppers and cook for 3 mins, then add the garlic and
+              tomatoes. Cook for another 5-8 mins until the tomatoes have
+              started to break down. Sprinkle in the flour, paprika and hot
+              paprika, if using, and cook for 30 seconds more. Return the
+              chicken thighs to the pan and mix gently to coat.
             </li>
             <li>
-              start coil folds with wet hands every 30 minutes, for 3 hours (6
-              times in total)
-            </li>
-            <li>
-              dough is soft and silky, should fall from dish. shape the dough,
-              braid, roll on bench to create surface tension.
-            </li>
-            <li>put in floured bonaton, in fridge 8 hours or overnight.</li>
-            <li>
-              20-30minutes in over with lid on, then another 15-20 minutes with
-              lid off. 230*c.
+              Pour in the stock, bring to the boil, then turn down the heat and
+              simmer, covered, for 15 mins. Remove the lid and simmer for
+              another 15 mins until the sauce has thickened. Stir in the soured
+              cream and cook for 5 mins – the sauce should be quite thick. Serve
+              with boiled potatoes, noodles or rice.
             </li>
           </ol>
         </div>
