--- a/garlic_lime_chicken.html
+++ b/garlic_lime_chicken.html
@@ -41,36 +41,39 @@
       </div>
     </div>
     <main class="container">
-      <form action="" onchange="redirectToPage(this)">
-        <select name="sweets" id="sweet-treats" class="menu">
-          <option value="" disabled selected>Select a sweet treat</option>
-          <option value="./cookies.html">Cookies</option>
-          <option value="./brownies.html">Brownies</option>
-          <option value="./sweets.html">back to sweets</option>
-        </select>
-      </form>
+      <div class="form-container">
+        <form action="" onchange="redirectToPage(this)">
+          <select name="sweets" id="menu" class="menu">
+            <option value="" disabled selected>Select a chicken dish</option>
+            <option value="./garlic_lime_chicken.html">
+              garlic lime chicken
+            </option>
+            <option value="./chicken_paprikash.html">chicken paprikash</option>
+            <option value="./chicken.html">back to chicken dishes</option>
+          </select>
+        </form>
+      </div>
       <section class="recipe">
-        <div class="recipe-heading"><h1>cookie time cookies</h1></div>
+        <div class="recipe-heading"><h1>garlic lime chicken</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>225g of butter</li>
-            <li>200g brown sugar</li>
-            <li>100g castor sugar</li>
-            <li>2 eggs</li>
-            <li>180g flour</li>
-            <li>180g self-raising</li>
-            <li>1 teaspoon cornflour</li>
-            <li>1/2 teaspoon of salt</li>
-            <li>1 teaspoon baking soda</li>
-            <li>350g chocolate (best is whitakers)</li>
-          </ul>
-          <ul class="recipe-gap">
-            <li>makes 10-12</li>
+            <li>3/4 teaspoon salt</li>
+            <li>1/4 teaspoon black pepper</li>
+            <li>1/4 cayenne pepper</li>
+            <li>2 1/4 teaspoons garlic powder, divided</li>
+            <li>1/4 teaspoon dried thyme</li>
+            <li>1/4 teaspoon dried parsley</li>
+            <li>1/8 teaspoon paprika</li>
+            <li>1/8 teaspoon onion powder</li>
+            <li>4 boneless, skinless chicken breast halves</li>
+            <li>2 tablespoons butter</li>
+            <li>1 tablespoon olive oil</li>
+            <li>3 tablespoons lime juice</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/choc_chip_cookies.webp"
+            src="./ASSETS/Images/garlic_lime_chicken.jpg"
             alt="image of cookies"
             height="250"
             width="350"
@@ -78,25 +81,20 @@
         </div>
         <div class="recipe-instructions">
           <h3>directions:</h3>
-          <!-- <p>
-            with a stand mixer, mix butter and sugar for at least 5 minutes. add
-            eggs one at a time. then add all of the other ingredients. add the
-            chocolate last. spoon the mixture into large mounds. then freeze for
-            at least 30 minutes. bake at 180*c-200*c for 10-14 minutes
-          </p> -->
           <ol>
             <li>
-              with a stand mixer, mix butter and sugar for at least 5 minutes.
+              Mix together salt, black pepper, cayenne, 1/4 teaspoon garlic
+              powder, thyme, parsley, paprika, and onion powder in a small bowl.
+              Sprinkle spice mixture generously on both sides of chicken
+              breasts.
             </li>
             <li>
-              add eggs one at a time. then add all of the other ingredients
+              Heat butter and olive oil in a large heavy skillet over medium
+              heat. Sauté chicken until golden brown, about 6 minutes on each
+              side. Sprinkle with remaining 2 teaspoons garlic powder and lime
+              juice. Cook 5 minutes more, stirring frequently to coat evenly
+              with cooking juices.
             </li>
-            <li>add the chocolate last.</li>
-            <li>
-              spoon the mixture into large mounds. then freeze for at least 30
-              minutes.
-            </li>
-            <li>bake at 180*c-200*c for 10-14 minutes</li>
           </ol>
         </div>
       </section>
