--- a/sloppy_joes.html
+++ b/sloppy_joes.html
@@ -41,36 +41,36 @@
       </div>
     </div>
     <main class="container">
-      <form action="" onchange="redirectToPage(this)">
-        <select name="sweets" id="sweet-treats" class="menu">
-          <option value="" disabled selected>Select a sweet treat</option>
-          <option value="./cookies.html">Cookies</option>
-          <option value="./brownies.html">Brownies</option>
-          <option value="./sweets.html">back to sweets</option>
-        </select>
-      </form>
+      <div class="form-container">
+        <form action="" onchange="redirectToPage(this)">
+          <select name="sweets" id="menu" class="menu">
+            <option value="" disabled selected>Select a beef dish</option>
+            <option value="./sloppy_joes.html">sloppy joes</option>
+            <option value="./beef_stroganoff.html">beef stroganoff</option>
+            <option value="./beef.html">back to beef dishes</option>
+          </select>
+        </form>
+      </div>
       <section class="recipe">
-        <div class="recipe-heading"><h1>cookie time cookies</h1></div>
+        <div class="recipe-heading"><h1>sloppy joes</h1></div>
         <div class="recipe-ingredients">
           <ul>
-            <li>225g of butter</li>
-            <li>200g brown sugar</li>
-            <li>100g castor sugar</li>
-            <li>2 eggs</li>
-            <li>180g flour</li>
-            <li>180g self-raising</li>
-            <li>1 teaspoon cornflour</li>
-            <li>1/2 teaspoon of salt</li>
-            <li>1 teaspoon baking soda</li>
-            <li>350g chocolate (best is whitakers)</li>
-          </ul>
-          <ul class="recipe-gap">
-            <li>makes 10-12</li>
+            <li>beef mince</li>
+            <li>onion</li>
+            <li>2 teaspoon garlic</li>
+            <li>1 teaspoon tomato paste</li>
+            <li>2/3 cup tomato sauce</li>
+            <li>1/3 cup water</li>
+            <li>1 tablespoon yellow mustard</li>
+            <li>1 teaspoon worcestershire sauce</li>
+            <li>red pepper flakes</li>
+            <li>salt and pepper</li>
+            <li>1 teaspoon brown sugar</li>
           </ul>
         </div>
         <div class="recipe-img">
           <img
-            src="./ASSETS/Images/choc_chip_cookies.webp"
+            src="./ASSETS/Images/sloppy_joes_2.jpg"
             alt="image of cookies"
             height="250"
             width="350"
@@ -78,25 +78,8 @@
         </div>
         <div class="recipe-instructions">
           <h3>directions:</h3>
-          <!-- <p>
-            with a stand mixer, mix butter and sugar for at least 5 minutes. add
-            eggs one at a time. then add all of the other ingredients. add the
-            chocolate last. spoon the mixture into large mounds. then freeze for
-            at least 30 minutes. bake at 180*c-200*c for 10-14 minutes
-          </p> -->
           <ol>
-            <li>
-              with a stand mixer, mix butter and sugar for at least 5 minutes.
-            </li>
-            <li>
-              add eggs one at a time. then add all of the other ingredients
-            </li>
-            <li>add the chocolate last.</li>
-            <li>
-              spoon the mixture into large mounds. then freeze for at least 30
-              minutes.
-            </li>
-            <li>bake at 180*c-200*c for 10-14 minutes</li>
+            <li>mix together in a pan. serve on toasted bun with cheese</li>
           </ol>
         </div>
       </section>
